nice linked list

--- a/src/app/core/layout/header.html
+++ b/src/app/core/layout/header.html
@@ -16,7 +16,7 @@
         id="navbar-collapse" 
         class="navbar-collapse collapse text-center justify-content-center"
         [class.show]="isNavbarOpen()">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav justify-content-center">
           @for (link of navLinks; track link.href) {
             <li class="nav-item">
               <a 
