--- a/src/app/features/music/album-detail-dialog.html
+++ b/src/app/features/music/album-detail-dialog.html
@@ -20,24 +20,22 @@
       <div class="album-metadata">
         <strong>Premiere:</strong> {{ data.album.releaseDate }}
       </div>
-
+      }
+      
       @if (data.album.artists) {
       <div class="album-metadata">
         <strong>Künstler:</strong> {{ data.album.artists }}
       </div>
-      } } @if (data.album.purchaseUrl) {
-      <div class="album-actions">
-        @if (data.album.status === 'coming-soon') {
-        <a [href]="data.album.purchaseUrl" class="btn btn-secondary"
-          >Album vorbestellen</a
-        >
-        } @else {
-        <a [href]="data.album.purchaseUrl" class="btn btn-secondary">
-          Album kaufen @if (data.album.price) { CHF {{ data.album.price }} }
-        </a>
-        }
-      </div>
       }
+      
+      <div class="album-actions">
+        <a
+          href="mailto:nathaliehildebrand@kinderkultur.ch?subject=Bestellung CD '{{ data.album.title }}'&body=Hallo,%0A%0AIch möchte gerne die CD '{{ data.album.title }}' bestellen.%0A%0AAnzahl CDs: 1%0APreis: CHF 22.00 (inkl. Porto)%0A%0ABitte senden Sie die Bestellung an:%0A%0AName: %0AStrasse: %0APLZ / Ort: %0A%0AVielen Dank und freundliche Grüsse"
+          class="btn btn-secondary"
+        >
+          CD bestellen (CHF 22.00 inkl. Porto)
+        </a>
+      </div>
     </div>
   </div>
 </div>
