--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -12,7 +12,7 @@
           <div class="item">
             <div class="item-inner member-card" (click)="openMemberBio(member)">
               <div class="member-profile">
-                <img class="img-fluid" [src]="member.image" [alt]="member.name">
+                <img class="img-fluid bw-filter" [src]="member.image" [alt]="member.name">
               </div>
               <div class="member-label">{{ member.instrument }}</div>
               <h3 class="member-name">{{ member.name }}</h3>
