--- a/src/styles.css
+++ b/src/styles.css
@@ -252,17 +252,19 @@ label {
 
 /* Logo */
 .logo-holder {
-  background-image: url("/images/logo-8.svg");
-  height: 100px;
+  background-image: url("/images/logo-1.svg");
+  -webkit-filter: drop-shadow(0px 0px 20px rgba(255, 255, 2555, 0.9));
+  filter: drop-shadow(0px 0px 20px rgba(255, 255, 2555, 0.9));
+  /* Similar syntax to box-shadow */
+  opacity: 0.7;
+  height: 150px;
+  margin-bottom: 3px;
   text-align: center;
-  background-color: transparent;
   background-position: center center;
   background-repeat: no-repeat;
   margin-top: 0;
-  margin-bottom: 30px;
   text-indent: -9999px;
   overflow: hidden;
-  background-size: contain;
 }
 
 
@@ -323,8 +325,5 @@ label {
     font-size: 24px;
     margin-bottom: 40px;
   }
-  
-  .logo-holder {
-    height: 50px;
-  }
+
 }
