--- a/src/app/features/contact/contact-section.html
+++ b/src/app/features/contact/contact-section.html
@@ -138,7 +138,7 @@
         </div>
     </div>
     
-    <div class="channels-block">
+    <!--div class="channels-block">
       <ul class="channels-list list-inline">
         @for (channel of musicChannels; track channel.name) {
           <li class="list-inline-item mr-3">
@@ -148,9 +148,9 @@
           </li>
         }
       </ul>
-    </div>
+    </div-->
     
-    <div class="social-media-block">
+    <!--div class="social-media-block">
       <ul class="list-inline social-media-list">
         @for (social of socialMedia; track social.name) {
           <li class="list-inline-item mr-3">
@@ -160,7 +160,7 @@
           </li>
         }
       </ul>
-    </div>
+    </div-->
 
   </div>
 </div>
