--- a/src/app/features/gigs/gigs-section.html
+++ b/src/app/features/gigs/gigs-section.html
@@ -45,13 +45,13 @@
       }
     </div>
     
-    <div class="gigs-contact text-center">
+    <!--div class="gigs-contact text-center">
       <h4 class="title">Möchten Sie einen privaten Auftritt buchen?</h4>
       <p class="intro center-block">
         Kontaktieren Sie uns für private Aufführungen, Firmenevents oder besondere Anlässe. 
         Wir freuen uns darauf, Ihnen ein unvergessliches Erlebnis zu bieten.
       </p>
       <a class="btn btn-ghost-primary scrollto" href="#contact">Jetzt Kontakt aufnehmen</a>
-    </div>
+    </div-->
   </div>
 </section>
