--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -1,11 +1,11 @@
 <section class="about-section section text-center">
   <div class="container">
     <h2 class="section-title">Team</h2>
-    <div class="section-intro">
+    <!--div class="section-intro">
       Willkommen bei Petruschka! Wir sind eine leidenschaftliche Gruppe von Musikern und Geschichtenerzählern, 
       die es sich zur Aufgabe gemacht haben, Kindern und Familien unvergessliche Erlebnisse zu schenken. 
       Mit unseren interaktiven Aufführungen erwecken wir märchenhafte Welten zum Leben.
-    </div>
+    </div-->
     
     <div class="members-block">
         @for (member of bandMembers(); track member.id) {
